--- a/README
+++ b/README
@@ -8,4 +8,4 @@ analysis_overlap_rd_v: this is to study the reconstruction by smoothness method,
 
 Execute and check analyse.m for more details. The functions are all placed in src/ and the data are all place in data/. 
 
-For any questions, please email me at zonggel@andrew.cmu.edu.
+For any questions, please email me.
